Add test suite boilerplate

--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -26,3 +26,17 @@ library
     , wai-test
     , hspec2
     , hspec-expectations-lifted
+
+test-suite spec
+  type:
+      exitcode-stdio-1.0
+  ghc-options:
+      -Wall -Werror
+  hs-source-dirs:
+      test
+  main-is:
+      Spec.hs
+  build-depends:
+      base == 4.*
+    , hspec-wai
+    , hspec-meta
