--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -39,3 +39,19 @@ test-suite spec
       base == 4.*
     , hspec-wai
     , hspec-meta
+
+test-suite example
+  type:
+      exitcode-stdio-1.0
+  ghc-options:
+      -Wall -Werror
+  hs-source-dirs:
+      example
+  main-is:
+      Spec.hs
+  build-depends:
+      base == 4.*
+    , hspec2
+    , hspec-wai
+    , http-types
+    , wai
