Move internal type, data and function to Internal module

--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -15,6 +15,7 @@ library
       src
   exposed-modules:
       Test.Hspec.Wai
+    , Test.Hspec.Wai.Internal
   other-modules:
       Test.Hspec.Wai.Matcher
   build-depends:
