--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -57,13 +57,12 @@ test-suite example
   type:
       exitcode-stdio-1.0
   ghc-options:
-      -Wall -Werror
-  hs-source-dirs:
-      example
+      -Wall -Werror -pgmL markdown-unlit
   main-is:
-      Spec.hs
+      README.lhs
   build-depends:
       base == 4.*
+    , markdown-unlit
     , hspec2
     , hspec-wai
     , http-types
