--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -8,6 +8,10 @@ maintainer:       Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@t
 build-type:       Simple
 cabal-version:    >= 1.8
 
+source-repository head
+  type: git
+  location: https://github.com/hspec/hspec-wai
+
 library
   ghc-options:
       -Wall
