--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -2,11 +2,15 @@ name:             hspec-wai
 version:          0.0.0
 license:          MIT
 license-file:     LICENSE
-copyright:        (c) 2012-2014 Fujimura Daisuke, Simon Hengel
+copyright:        (c) 2012-2014 Fujimura Daisuke,
+                  (c) 2014 Simon Hengel
 author:           Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
 maintainer:       Fujimura Daisuke <me@fujimuradaisuke.com>, Simon Hengel <sol@typeful.net>
 build-type:       Simple
 cabal-version:    >= 1.8
+category:         Testing
+synopsis:         Experimental Hspec support for testing WAI applications (depends on hspec2!)
+description:      Experimental Hspec support for testing WAI applications (depends on hspec2!)
 
 source-repository head
   type: git
