--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -35,3 +35,21 @@ test-suite doctests
   build-depends:
       base    == 4.*
     , doctest >= 0.9.4.1
+
+test-suite README
+  type:
+      exitcode-stdio-1.0
+  ghc-options:
+      -Wall -Werror -pgmL markdown-unlit
+  main-is:
+      README.lhs
+  build-depends:
+      base == 4.*
+    , markdown-unlit
+    , hspec2
+    , hspec-wai
+    , hspec-wai-json
+    , http-types
+    , aeson
+    , wai
+    , scotty
