--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: haskell
 
 script:
  - cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test
+ - cabal install doctest
+ - doctest -isrc -hide-all-packages -package base -package bytestring -package text -package transformers -package case-insensitive -package http-types -package wai -package wai-extra -package hspec2 -package template-haskell -package aeson -package aeson-qq src/Test/Hspec/Wai/JSON.hs
