--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -58,8 +58,8 @@ test-suite spec
     , transformers
     , case-insensitive
     , http-types
-    , wai
-    , wai-extra
+    , wai >= 3
+    , wai-extra >= 3
     , hspec2
 
 test-suite README
