Remove lower bounds from test-suite section
(they are picked up from the library section)

--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -58,8 +58,8 @@ test-suite spec
     , transformers
     , case-insensitive
     , http-types
-    , wai >= 3
-    , wai-extra >= 3
+    , wai
+    , wai-extra
     , hspec2
 
 test-suite README
