Accept `Content-Type: application/json; charset=utf-8` for JSON matcher

--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -61,6 +61,9 @@ test-suite spec
     , wai
     , wai-extra
     , hspec2
+    , template-haskell
+    , aeson
+    , aeson-qq
 
 test-suite README
   type:
