Address author's PR feedback
https://github.com/bendyworks/hspec-wai/commit/94b151ecb333582aa1356554a427b71db24c0827

- rename Test.Hspec.Wai.Expectation to Test.Hspec.Wai.Expectations
- add documentation to lift Test.Hspec functions
- import Test.Hspec.Expectations rather than Test.Hspec to future-proof

--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -27,6 +27,7 @@ library
   other-modules:
       Test.Hspec.Wai.Util
       Test.Hspec.Wai.Matcher
+      Test.Hspec.Wai.Expectations
   build-depends:
       base == 4.*
     , bytestring
@@ -37,6 +38,7 @@ library
     , wai >= 3
     , wai-extra >= 3
     , hspec2
+    , hspec-expectations
 
 test-suite spec
   type:
@@ -57,3 +59,4 @@ test-suite spec
     , wai
     , wai-extra
     , hspec2
+    , hspec-expectations
