change header compare to case-insensitive
add case-insensitive package to dependencies

--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -30,6 +30,7 @@ library
     , template-haskell
     , aeson
     , aeson-qq >= 0.7.3
+    , case-insensitive >= 1.2.0.4 
 
 test-suite spec
   type:
