--- a/package.yaml
+++ b/package.yaml
@@ -30,8 +30,10 @@ dependencies:
   - transformers
   - case-insensitive
   - http-types
+  - network
   - wai >= 3
   - wai-extra >= 3
+  - warp
   - hspec-core == 2.*
   - hspec-expectations
   - QuickCheck
@@ -39,8 +41,9 @@ dependencies:
 library:
   exposed-modules:
     - Test.Hspec.Wai
-    - Test.Hspec.Wai.QuickCheck
     - Test.Hspec.Wai.Internal
+    - Test.Hspec.Wai.QuickCheck
+    - Test.Hspec.Wai.Server
 
 tests:
   spec:
@@ -49,3 +52,5 @@ tests:
     dependencies:
       - hspec
       - QuickCheck
+      - process
+      - silently
