--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yml by hpack version 0.2.0.
+-- This file has been generated from package.yaml by hpack version 0.8.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -21,48 +21,46 @@ synopsis:         Experimental Hspec support for testing WAI applications
 description:      Experimental Hspec support for testing WAI applications
 
 extra-source-files:
-  changelog
+    changelog
 
 source-repository head
   type: git
   location: https://github.com/hspec/hspec-wai
 
 library
-  hs-source-dirs: src
+  hs-source-dirs:
+      src
+  ghc-options: -Wall
+  build-depends:
+      base == 4.*
+    , base-compat
+    , bytestring >= 0.10
+    , text
+    , transformers
+    , case-insensitive
+    , http-types
+    , wai >= 3
+    , wai-extra >= 3
+    , hspec-core == 2.*
+    , hspec-expectations
   exposed-modules:
       Test.Hspec.Wai
       Test.Hspec.Wai.Internal
   other-modules:
       Test.Hspec.Wai.Matcher
       Test.Hspec.Wai.Util
-  build-depends:
-      base == 4.*
-    , bytestring >= 0.10
-    , text
-    , transformers
-    , case-insensitive
-    , http-types
-    , wai >= 3
-    , wai-extra >= 3
-    , hspec-core == 2.*
-    , hspec-expectations
-  ghc-options: -Wall
   default-language: Haskell2010
 
 test-suite spec
   type: exitcode-stdio-1.0
-  hs-source-dirs: src, test
   main-is: Spec.hs
-  other-modules:
-      Test.Hspec.Wai.Internal
-      Test.Hspec.Wai.Matcher
-      Test.Hspec.Wai.Util
-      Test.Hspec.Wai
-      Test.Hspec.Wai.MatcherSpec
-      Test.Hspec.Wai.UtilSpec
-      Test.Hspec.WaiSpec
+  hs-source-dirs:
+      src
+    , test
+  ghc-options: -Wall
   build-depends:
       base == 4.*
+    , base-compat
     , bytestring >= 0.10
     , text
     , transformers
@@ -72,8 +70,14 @@ test-suite spec
     , wai-extra >= 3
     , hspec-core == 2.*
     , hspec-expectations
-
     , hspec
     , QuickCheck
-  ghc-options: -Wall
+  other-modules:
+      Test.Hspec.Wai
+      Test.Hspec.Wai.Internal
+      Test.Hspec.Wai.Matcher
+      Test.Hspec.Wai.Util
+      Test.Hspec.Wai.MatcherSpec
+      Test.Hspec.Wai.UtilSpec
+      Test.Hspec.WaiSpec
   default-language: Haskell2010
