--- a/package.yaml
+++ b/package.yaml
@@ -1,12 +1,12 @@
 name:             hspec-wai
-version:          0.6.3
+version:          0.6.4
 license:          MIT
 category:         Testing
 synopsis:         Experimental Hspec support for testing WAI applications
 description:      Experimental Hspec support for testing WAI applications
 copyright:
   - (c) 2012-2014 Fujimura Daisuke
-  - (c) 2014 Simon Hengel
+  - (c) 2014-2015 Simon Hengel
 author:
   - Fujimura Daisuke <me@fujimuradaisuke.com>
   - Simon Hengel <sol@typeful.net>
