--- a/hspec-wai.cabal
+++ b/hspec-wai.cabal
@@ -1,9 +1,9 @@
--- This file has been generated from package.yaml by hpack version 0.8.0.
+-- This file has been generated from package.yaml by hpack version 0.10.0.
 --
 -- see: https://github.com/sol/hpack
 
 name:             hspec-wai
-version:          0.6.4
+version:          0.6.5
 homepage:         https://github.com/hspec/hspec-wai#readme
 bug-reports:      https://github.com/hspec/hspec-wai/issues
 license:          MIT
@@ -44,6 +44,7 @@ library
     , hspec-core == 2.*
     , hspec-expectations
     , QuickCheck
+    , with-location
   exposed-modules:
       Test.Hspec.Wai
       Test.Hspec.Wai.QuickCheck
@@ -51,6 +52,7 @@ library
   other-modules:
       Test.Hspec.Wai.Matcher
       Test.Hspec.Wai.Util
+      Paths_hspec_wai
   default-language: Haskell2010
 
 test-suite spec
@@ -73,6 +75,7 @@ test-suite spec
     , hspec-core == 2.*
     , hspec-expectations
     , QuickCheck
+    , with-location
     , hspec
     , QuickCheck
   other-modules:
