--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yml by hpack version 0.2.0.
+-- This file has been generated from package.yaml by hpack version 0.11.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,7 +25,8 @@ source-repository head
   location: https://github.com/hspec/hspec-wai
 
 library
-  hs-source-dirs: src
+  hs-source-dirs:
+      src
   exposed-modules:
       Test.Hspec.Wai.JSON
   build-depends:
@@ -41,7 +42,8 @@ library
 
 test-suite spec
   type: exitcode-stdio-1.0
-  hs-source-dirs: test
+  hs-source-dirs:
+      test
   main-is: Spec.hs
   other-modules:
       Test.Hspec.Wai.JSONSpec
