--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,19 @@ sudo: false
 
 language: c
 
-matrix:
-  include:
-    - env: GHCVER=7.8.4
-      compiler: "GHC 7.8.4"
-      addons: {apt: {packages: [happy-1.19.5, cabal-install-1.22, ghc-7.8.4], sources: [hvr-ghc]}}
-    - env: GHCVER=7.10.3
-      compiler: "GHC 7.10.3"
-      addons: {apt: {packages: [happy-1.19.5, cabal-install-1.22, ghc-7.10.3], sources: [hvr-ghc]}}
+env:
+  - GHCVER=7.8.4
+  - GHCVER=7.10.2
+
+addons:
+  apt:
+    sources:
+      - hvr-ghc
+    packages:
+      - ghc-7.8.4
+      - ghc-7.10.2
+      - happy-1.19.5
+      - cabal-install-1.22
 
 before_install:
   - (mkdir -p $HOME/.local/bin && cd $HOME/.local/bin && wget https://zalora-public.s3.amazonaws.com/tinc && chmod +x tinc)
