Use http-media to check JSON content type

--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -33,6 +33,7 @@ library
       base == 4.*
     , hspec-wai == 0.6.*
     , bytestring
+    , http-media
     , template-haskell
     , aeson
     , aeson-qq >= 0.7.3
