--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -3,7 +3,7 @@
 -- see: https://github.com/sol/hpack
 
 name:             hspec-wai-json
-version:          0.7.0
+version:          0.8.0
 homepage:         https://github.com/hspec/hspec-wai#readme
 bug-reports:      https://github.com/hspec/hspec-wai/issues
 license:          MIT
@@ -31,7 +31,7 @@ library
       Test.Hspec.Wai.JSON
   build-depends:
       base == 4.*
-    , hspec-wai == 0.7.*
+    , hspec-wai == 0.8.0
     , bytestring
     , template-haskell
     , aeson
