--- a/package.yaml
+++ b/package.yaml
@@ -42,6 +42,7 @@ library:
     - Test.Hspec.Wai.QuickCheck
     - Test.Hspec.Wai.Internal
     - Test.Hspec.Wai.Matcher
+    - Test.Hspec.Wai.Util
 
 tests:
   spec:
