--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yaml by hpack version 0.15.0.
+-- This file has been generated from package.yaml by hpack version 0.19.3.
 --
 -- see: https://github.com/sol/hpack
 
@@ -29,14 +29,16 @@ library
       src
   exposed-modules:
       Test.Hspec.Wai.JSON
+  other-modules:
+      Paths_hspec_wai_json
   build-depends:
-      base == 4.*
-    , hspec-wai == 0.8.0
+      aeson
+    , aeson-qq >=0.7.3
+    , base ==4.*
     , bytestring
-    , template-haskell
-    , aeson
-    , aeson-qq >= 0.7.3
     , case-insensitive
+    , hspec-wai ==0.8.0
+    , template-haskell
   ghc-options: -Wall
   default-language: Haskell2010
 
@@ -47,10 +49,11 @@ test-suite spec
   main-is: Spec.hs
   other-modules:
       Test.Hspec.Wai.JSONSpec
+      Paths_hspec_wai_json
   build-depends:
-      base == 4.*
-    , hspec-wai-json
-    , hspec-wai
+      base ==4.*
     , hspec
+    , hspec-wai
+    , hspec-wai-json
   ghc-options: -Wall
   default-language: Haskell2010
