--- a/hspec-wai-json/hspec-wai-json.cabal
+++ b/hspec-wai-json/hspec-wai-json.cabal
@@ -1,13 +1,11 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 3a831056a1e1308791d1246512f15913cfee8331e04e4037f041fdfc1800290b
 
 name:             hspec-wai-json
-version:          0.11.0
+version:          0.11.1
 homepage:         https://github.com/hspec/hspec-wai#readme
 bug-reports:      https://github.com/hspec/hspec-wai/issues
 license:          MIT
@@ -40,7 +38,7 @@ library
     , base ==4.*
     , bytestring
     , case-insensitive
-    , hspec-wai ==0.11.0
+    , hspec-wai ==0.11.1
     , template-haskell
   ghc-options: -Wall
   default-language: Haskell2010
@@ -59,4 +57,6 @@ test-suite spec
     , hspec-wai
     , hspec-wai-json
   ghc-options: -Wall
+  build-tool-depends:
+      hspec-discover:hspec-discover
   default-language: Haskell2010
