--- a/hspec-wai-json/package.yaml
+++ b/hspec-wai-json/package.yaml
@@ -1,5 +1,5 @@
 name:             hspec-wai-json
-version:          0.11.0
+version:          0.11.1
 license:          MIT
 category:         Testing
 synopsis:         Testing JSON APIs with hspec-wai
@@ -22,7 +22,7 @@ library:
   source-dirs: src
   dependencies:
     - base == 4.*
-    - hspec-wai == 0.11.0
+    - hspec-wai == 0.11.1
     - bytestring
     - template-haskell
     - aeson
@@ -38,3 +38,4 @@ tests:
       - hspec-wai-json
       - hspec-wai
       - hspec
+    build-tools: hspec-discover
